--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,16 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 39,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install -Uqq fastbook"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -19,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 41,
       "metadata": {
         "id": "dvpw0FPb_wDT"
       },
@@ -50,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "background_save": true
@@ -64,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -80,7 +89,7 @@
               "(#1) [Path('export.pkl')]"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -92,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "background_save": true
@@ -106,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -123,7 +132,7 @@
               "('german shepherd', tensor(2), tensor([2.4385e-06, 1.3935e-06, 1.0000e+00]))"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -134,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -150,7 +159,7 @@
               "['beagle', 'dachshund', 'german shepherd']"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -170,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -189,7 +198,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "deb39e990a874460aedb15ef62fa8385",
+              "model_id": "401ad4a4292940e087803783230cc6d3",
               "version_major": 2,
               "version_minor": 0
             },
@@ -208,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "background_save": true
@@ -224,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "background_save": true
@@ -238,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -256,7 +265,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "95203125fe5247719aed413bc7c8ac72",
+              "model_id": "38cd00cc5a0e42c398464c54c4bed761",
               "version_major": 2,
               "version_minor": 0
             },
@@ -277,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -294,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -313,7 +322,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "93729645f23f422784150f001b3bda50",
+              "model_id": "2552ac8700694232873c3097b101cdd9",
               "version_major": 2,
               "version_minor": 0
             },
@@ -333,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -352,7 +361,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "5407517a39364468bc80b2057151a062",
+              "model_id": "27f5f67c24094e00b2f4506af8c4e400",
               "version_major": 2,
               "version_minor": 0
             },
@@ -371,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "background_save": true
@@ -392,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "background_save": true
@@ -408,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "background_save": true,
@@ -440,7 +449,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "de6e74a0d962406eb56cc4883d52f6b5",
+              "model_id": "6a97ff2e5ae542f09a7a80f7ef4f7519",
               "version_major": 2,
               "version_minor": 0
             },
@@ -468,7 +477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -477,94 +486,7 @@
         "id": "2YUnkMrx_wDd",
         "outputId": "85fb3929-b20f-46c4-f46c-fbe2eba9ea2d"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting voila\n",
-            "  Downloading voila-0.4.0-py3-none-any.whl (5.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.5/5.5 MB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0mm\n",
-            "\u001b[?25hCollecting websockets>=9.0\n",
-            "  Downloading websockets-11.0.2-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (129 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.9/129.9 KB\u001b[0m \u001b[31m16.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting jupyter-server<2.0.0,>=1.18\n",
-            "  Downloading jupyter_server-1.24.0-py3-none-any.whl (347 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m347.5/347.5 KB\u001b[0m \u001b[31m39.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: nbconvert<8,>=6.4.5 in ./env_project/lib/python3.10/site-packages (from voila) (7.3.1)\n",
-            "Collecting jupyter-client<=7.4.1,>=6.1.3\n",
-            "  Downloading jupyter_client-7.4.1-py3-none-any.whl (132 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m132.1/132.1 KB\u001b[0m \u001b[31m12.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: traitlets<6,>=5.0.3 in ./env_project/lib/python3.10/site-packages (from voila) (5.9.0)\n",
-            "Requirement already satisfied: nbclient<0.8,>=0.4.0 in ./env_project/lib/python3.10/site-packages (from voila) (0.7.4)\n",
-            "Collecting jupyterlab-server<3,>=2.3.0\n",
-            "  Downloading jupyterlab_server-2.22.1-py3-none-any.whl (57 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.0/57.0 KB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: jupyter-core>=4.11.0 in ./env_project/lib/python3.10/site-packages (from voila) (5.3.0)\n",
-            "Requirement already satisfied: nest-asyncio>=1.5.4 in ./env_project/lib/python3.10/site-packages (from jupyter-client<=7.4.1,>=6.1.3->voila) (1.5.6)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in ./env_project/lib/python3.10/site-packages (from jupyter-client<=7.4.1,>=6.1.3->voila) (2.8.2)\n",
-            "Requirement already satisfied: pyzmq>=23.0 in ./env_project/lib/python3.10/site-packages (from jupyter-client<=7.4.1,>=6.1.3->voila) (25.0.2)\n",
-            "Requirement already satisfied: tornado>=6.2 in ./env_project/lib/python3.10/site-packages (from jupyter-client<=7.4.1,>=6.1.3->voila) (6.3.1)\n",
-            "Collecting entrypoints\n",
-            "  Downloading entrypoints-0.4-py3-none-any.whl (5.3 kB)\n",
-            "Requirement already satisfied: platformdirs>=2.5 in ./env_project/lib/python3.10/site-packages (from jupyter-core>=4.11.0->voila) (3.5.0)\n",
-            "Requirement already satisfied: prometheus-client in ./env_project/lib/python3.10/site-packages (from jupyter-server<2.0.0,>=1.18->voila) (0.16.0)\n",
-            "Requirement already satisfied: nbformat>=5.2.0 in ./env_project/lib/python3.10/site-packages (from jupyter-server<2.0.0,>=1.18->voila) (5.8.0)\n",
-            "Requirement already satisfied: argon2-cffi in ./env_project/lib/python3.10/site-packages (from jupyter-server<2.0.0,>=1.18->voila) (21.3.0)\n",
-            "Requirement already satisfied: anyio<4,>=3.1.0 in ./env_project/lib/python3.10/site-packages (from jupyter-server<2.0.0,>=1.18->voila) (3.6.2)\n",
-            "Requirement already satisfied: packaging in ./env_project/lib/python3.10/site-packages (from jupyter-server<2.0.0,>=1.18->voila) (23.1)\n",
-            "Requirement already satisfied: Send2Trash in ./env_project/lib/python3.10/site-packages (from jupyter-server<2.0.0,>=1.18->voila) (1.8.2)\n",
-            "Requirement already satisfied: websocket-client in ./env_project/lib/python3.10/site-packages (from jupyter-server<2.0.0,>=1.18->voila) (1.5.1)\n",
-            "Requirement already satisfied: jinja2 in ./env_project/lib/python3.10/site-packages (from jupyter-server<2.0.0,>=1.18->voila) (3.1.2)\n",
-            "Requirement already satisfied: terminado>=0.8.3 in ./env_project/lib/python3.10/site-packages (from jupyter-server<2.0.0,>=1.18->voila) (0.17.1)\n",
-            "Collecting babel>=2.10\n",
-            "  Downloading Babel-2.12.1-py3-none-any.whl (10.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.1/10.1 MB\u001b[0m \u001b[31m20.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
-            "\u001b[?25hCollecting json5>=0.9.0\n",
-            "  Downloading json5-0.9.11-py2.py3-none-any.whl (19 kB)\n",
-            "Requirement already satisfied: jsonschema>=4.17.3 in ./env_project/lib/python3.10/site-packages (from jupyterlab-server<3,>=2.3.0->voila) (4.17.3)\n",
-            "Requirement already satisfied: requests>=2.28 in ./env_project/lib/python3.10/site-packages (from jupyterlab-server<3,>=2.3.0->voila) (2.29.0)\n",
-            "Requirement already satisfied: tinycss2 in ./env_project/lib/python3.10/site-packages (from nbconvert<8,>=6.4.5->voila) (1.2.1)\n",
-            "Requirement already satisfied: pandocfilters>=1.4.1 in ./env_project/lib/python3.10/site-packages (from nbconvert<8,>=6.4.5->voila) (1.5.0)\n",
-            "Requirement already satisfied: jupyterlab-pygments in ./env_project/lib/python3.10/site-packages (from nbconvert<8,>=6.4.5->voila) (0.2.2)\n",
-            "Requirement already satisfied: mistune<3,>=2.0.3 in ./env_project/lib/python3.10/site-packages (from nbconvert<8,>=6.4.5->voila) (2.0.5)\n",
-            "Requirement already satisfied: pygments>=2.4.1 in ./env_project/lib/python3.10/site-packages (from nbconvert<8,>=6.4.5->voila) (2.15.1)\n",
-            "Requirement already satisfied: defusedxml in ./env_project/lib/python3.10/site-packages (from nbconvert<8,>=6.4.5->voila) (0.7.1)\n",
-            "Requirement already satisfied: bleach in ./env_project/lib/python3.10/site-packages (from nbconvert<8,>=6.4.5->voila) (6.0.0)\n",
-            "Requirement already satisfied: beautifulsoup4 in ./env_project/lib/python3.10/site-packages (from nbconvert<8,>=6.4.5->voila) (4.12.2)\n",
-            "Requirement already satisfied: markupsafe>=2.0 in ./env_project/lib/python3.10/site-packages (from nbconvert<8,>=6.4.5->voila) (2.1.2)\n",
-            "Requirement already satisfied: sniffio>=1.1 in ./env_project/lib/python3.10/site-packages (from anyio<4,>=3.1.0->jupyter-server<2.0.0,>=1.18->voila) (1.3.0)\n",
-            "Requirement already satisfied: idna>=2.8 in ./env_project/lib/python3.10/site-packages (from anyio<4,>=3.1.0->jupyter-server<2.0.0,>=1.18->voila) (3.4)\n",
-            "Requirement already satisfied: attrs>=17.4.0 in ./env_project/lib/python3.10/site-packages (from jsonschema>=4.17.3->jupyterlab-server<3,>=2.3.0->voila) (23.1.0)\n",
-            "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in ./env_project/lib/python3.10/site-packages (from jsonschema>=4.17.3->jupyterlab-server<3,>=2.3.0->voila) (0.19.3)\n",
-            "Requirement already satisfied: fastjsonschema in ./env_project/lib/python3.10/site-packages (from nbformat>=5.2.0->jupyter-server<2.0.0,>=1.18->voila) (2.16.3)\n",
-            "Requirement already satisfied: six>=1.5 in ./env_project/lib/python3.10/site-packages (from python-dateutil>=2.8.2->jupyter-client<=7.4.1,>=6.1.3->voila) (1.16.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in ./env_project/lib/python3.10/site-packages (from requests>=2.28->jupyterlab-server<3,>=2.3.0->voila) (2022.12.7)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in ./env_project/lib/python3.10/site-packages (from requests>=2.28->jupyterlab-server<3,>=2.3.0->voila) (3.1.0)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in ./env_project/lib/python3.10/site-packages (from requests>=2.28->jupyterlab-server<3,>=2.3.0->voila) (1.26.15)\n",
-            "Requirement already satisfied: ptyprocess in ./env_project/lib/python3.10/site-packages (from terminado>=0.8.3->jupyter-server<2.0.0,>=1.18->voila) (0.7.0)\n",
-            "Requirement already satisfied: argon2-cffi-bindings in ./env_project/lib/python3.10/site-packages (from argon2-cffi->jupyter-server<2.0.0,>=1.18->voila) (21.2.0)\n",
-            "Requirement already satisfied: soupsieve>1.2 in ./env_project/lib/python3.10/site-packages (from beautifulsoup4->nbconvert<8,>=6.4.5->voila) (2.4.1)\n",
-            "Requirement already satisfied: webencodings in ./env_project/lib/python3.10/site-packages (from bleach->nbconvert<8,>=6.4.5->voila) (0.5.1)\n",
-            "Requirement already satisfied: cffi>=1.0.1 in ./env_project/lib/python3.10/site-packages (from argon2-cffi-bindings->argon2-cffi->jupyter-server<2.0.0,>=1.18->voila) (1.15.1)\n",
-            "Requirement already satisfied: pycparser in ./env_project/lib/python3.10/site-packages (from cffi>=1.0.1->argon2-cffi-bindings->argon2-cffi->jupyter-server<2.0.0,>=1.18->voila) (2.21)\n",
-            "Installing collected packages: json5, websockets, entrypoints, babel, jupyter-client, jupyter-server, jupyterlab-server, voila\n",
-            "  Attempting uninstall: jupyter-client\n",
-            "    Found existing installation: jupyter_client 8.2.0\n",
-            "    Uninstalling jupyter_client-8.2.0:\n",
-            "      Successfully uninstalled jupyter_client-8.2.0\n",
-            "  Attempting uninstall: jupyter-server\n",
-            "    Found existing installation: jupyter_server 2.5.0\n",
-            "    Uninstalling jupyter_server-2.5.0:\n",
-            "      Successfully uninstalled jupyter_server-2.5.0\n",
-            "Successfully installed babel-2.12.1 entrypoints-0.4 json5-0.9.11 jupyter-client-7.4.1 jupyter-server-1.24.0 jupyterlab-server-2.22.1 voila-0.4.0 websockets-11.0.2\n",
-            "Enabling: voila\n",
-            "- Writing config: /home/arthur/Documents/UFPE/6 PERIODO/INGLES/test/env_project/etc/jupyter\n",
-            "    - Validating...\n",
-            "      voila 0.4.0 \u001b[32mOK\u001b[0m\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#hide\n",
         "# !pip install voila\n",
